# PayPhone

./: .env.example  .gitignore  .gitlab-ci.yml  CNAME  Dockerfile.api  VERCEL.md  docker-compose.yml  index.html  package-lock.json  package.json  payphone.js  render.yaml  vercel.json
.cursor/rules/: payphone-v5-spec.mdc
.github/workflows/: ci.yml  desktop-build.yml
apps/api/: README.md  package.json  vercel.json
apps/api/src/: config.ts  db.ts  helmetMiddleware.ts  (+2 more)
apps/desktop/: .env.example  index.html  package.json
apps/gateway/: Dockerfile  package.json
apps/mask-proxy/: package.json
apps/web/: next.config.mjs  package.json  tailwind.config.cjs  vercel.json
contracts/: hardhat.config.ts  package.json  tsconfig.json
contracts/contracts/: PayPhoneCredits.sol  PayPhoneEscrow.sol  PayPhoneEscrowERC20.sol
docs/: PAYPHONE-V5-BUILD-SPEC.md  PAYPHONE-V6-BUILD-GUIDE.md
scripts/: circle-setup.mjs  smoke-test.mjs  start-dev-stack.mjs
services/escrow-engine/: Main.hs  README.md  payphone-escrow-engine.cabal
services/escrow-engine/Escrow/: Billing.hs  Marketing.hs  SupplyChain.hs  Transition.hs  Types.hs
services/escrow-shim/: server.mjs
services/execution-orchestrator/: server.mjs
services/intent-shim/: server.mjs
services/ledger-service/: package.json  server.mjs
services/routing-engine/: server.mjs
services/telephony-engine/: Main.hs  payphone-telephony-engine.cabal
services/telephony-engine/Telephony/: Billing.hs  Routing.hs  SmsSignature.hs  StellarAddress.hs  Storage.hs  Tolls.hs  Types.hs
services/telephony-shim/: server.mjs
(+111 files in other folders)
