cabal-version: 2.4
name: payphone-escrow-engine
version: 0.1.0.0
synopsis: Payphone escrow rules engine
license: MIT

executable escrow-engine
  main-is: Main.hs
  hs-source-dirs: .
  other-modules: Escrow.Types, Escrow.Transition
  build-depends:
    base,
    aeson,
    bytestring,
    text,
    warp,
    wai,
    wai-cors,
    http-types,
    containers
  default-language: Haskell2010
  ghc-options: -Wall
