cabal-version: 2.4
name: payphone-telephony-engine
version: 0.1.0.0
synopsis: Payphone name-to-name telephony rules engine
license: MIT

executable telephony-engine
  main-is: Main.hs
  hs-source-dirs: .
  other-modules: Telephony.Types, Telephony.Routing, Telephony.Tolls, Telephony.Billing
  build-depends:
    base,
    aeson,
    bytestring,
    text,
    warp,
    wai,
    wai-cors,
    http-types,
    containers
  default-language: Haskell2010
  ghc-options: -Wall
